--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,34 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <%= link_to 'Instarails', root_path, class: 'navbar-brand' %>
+        
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        <div class="collapse navbar-collapse" id="navbarText">
+          <% if current_user %>
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <%= link_to 'Novo post', new_post_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item-right float-right">
+                  <%= link_to 'Sair', destroy_user_session_path, method: :delete, class: 'nav-link' %>
+                </li>
+            </ul>
+
+            <span class="navbar-text">
+                <%= current_user.email %>
+            </span>
+          <% end %>
+        </div>
+      </nav>
+
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <%= yield %>
+    </div>
   </body>
 </html>
